tests/neg-custom-args/captures/depfun-reach.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/depfun-reach.scala:19:4 ----------------------------------
19 |    op // error
   |    ^^
   |    Found:    (op : (xs: List[(X, box () ->{io} Unit)]) => List[box () ->{xs*} Unit])
   |    Required: (xs: List[(X, box () ->{io} Unit)]) => List[() -> Unit]
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/depfun-reach.scala:26:60 ---------------------------------
26 |  val b: (xs: List[() ->{io} Unit]) => List[() ->{} Unit] = a // error
   |                                                            ^
   |                                     Found:    (a : (xs: List[box () ->{io} Unit]) => List[box () ->{xs*} Unit])
   |                                     Required: (xs: List[box () ->{io} Unit]) => List[() -> Unit]
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/depfun-reach.scala:18:17 ------------------------------------------------------
18 |               : (xs: List[(X, () ->{io} Unit)]) => List[() ->{} Unit] = // error
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |Separation failure: method foo's result type (xs: List[(X, box () ->{io} Unit)]) => List[() -> Unit] hides parameter op.
   |The parameter needs to be annotated with @consume to allow this.
